fix menu bug on tablet

--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -57,7 +57,17 @@ header#header {
                 }
             }
 
-            @media (max-width: 768px) {
+            @media (min-width: 768px) and (max-width: 1000px) {
+                .menu-item {
+                    padding: 2px 0;
+
+                    a {
+                        padding: 10px 15px;
+                    }
+                }
+            }
+
+            @media (max-width: 767px) {
                 border-bottom: 2px solid $base-yellow;
                 transition: height .3s ease;
             }
