--- a/src/scss/pages/_home.scss
+++ b/src/scss/pages/_home.scss
@@ -140,7 +140,7 @@
     section {
         margin-bottom: 100px;
 
-        @media (max-width: 525px) {
+        @media (max-width: 1200px) {
             margin-bottom: 50px;
             
             .fz-content {
